Fix Bug 308227 - Changing identities (that have different custom

template) in composer window doesn't take effect for the message body

FIXED-IN: 4.10
BUG: 308227